--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="social.html">Social</a>
         </div>
     </header>
-    <div class="relleno"></div>
+    <div class="main-container"></div>
     
 </body>
 </html>
